--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,6 +1,14 @@
+.main{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  
+}
+
 .container{
-  width: 100%;
-  height:100%;
+    width: 100%;
+    height:100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,7 +20,7 @@
     background-position: center;
     background-size:cover;
     background-repeat: no-repeat;
-
+    
 }
 
 #heading{
@@ -32,7 +40,7 @@
   color: black;
 }
 .inp{
-  width: 350px;
+  width: 300px;
   padding: 9px;
   font-size: 22px;
   border: none;
@@ -52,4 +60,84 @@
 }
 .msg{
   color:rgb(218, 235, 187);
+}
+.categories {
+  padding:0 50px;
+  display: flex;
+  
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+
+}
+
+.category-btn {
+  height:80px;
+  width:100px;
+  background-color: #a19d9d59;
+  color: rgb(190, 225, 172);
+  border: none;
+  padding: 8px 5px;
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: 30px;
+  transition: background-color 0.3s;
+}
+
+.category-btn:hover {
+  background-color: #767575;
+}
+.slider-container {
+  max-width: 100%;
+  overflow-x: hidden;
+ 
+}
+.slide-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ 
+}
+
+.slide-content {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  width: 100%;
+  box-sizing: border-box;
+}
+.slider-image-side {
+  width: 1000px;
+  height: 300px;
+  object-fit: cover;  
+  object-position: center; 
+  display: block;
+  
+}
+
+.slide-text {
+  padding: 20px;
+  max-width: 400px;
+}
+
+.slide-text h2 {
+  font-size: 2rem;
+  margin-bottom: 10px;
+}
+
+.slide-text p {
+  font-size: 1rem;
+  color: #555;
+}
+@media (max-width: 768px) {
+  .slide-content {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .slider-image-side {
+    max-width: 90%;
+  }
 }
