--- a/src/css/mealinfo.css
+++ b/src/css/mealinfo.css
@@ -1,39 +1,36 @@
 
 .meal{
+     height:100%;
+    width:100vw;
+     min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
     column-gap: 70px;
     row-gap: 15px;
-    width: 100vw;
-    height: 100vh;
     flex-wrap: wrap;
-    padding: 20px 100px;;
+    padding: 20px 50px;
     background-color: rgba(166, 182, 99, 0.729);
-color:black;
+     color:black;
 }
 .img{
-    width:400px;
+    width:350px;
     height:400px;
     border-radius: 10px;
-       transition:transform 0.2s;
 }
-.img:hover{
-     transform:scale(1.05);
-}
+
 .child1{
     display: flex;
     flex-direction: column;
     row-gap: 20px;
      text-wrap: wrap;
      flex-wrap: wrap;
-      align-items: center;
+     align-items:flex-start;
     justify-content: center;
- 
 
 }
 .child1 button{
-    height:35px;
+    height:fit-content;
     width:fit-content;
     padding:5px;
     background-color: rgb(255, 255, 255);
@@ -45,8 +42,8 @@ color:black;
     outline: none;
     font-size: 20px;
 }
-.child2 p{
-   
+.child2 {
+     align-items: center;
+     justify-content: center;
       font-size: 20px;
-     
 }
