--- a/src/index.css
+++ b/src/index.css
@@ -3,4 +3,6 @@
   padding:0;
   box-sizing: border-box;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  scroll-behavior: smooth;
+  scrollbar-width:none;
 }
