--- a/src/css/main.css
+++ b/src/css/main.css
@@ -32,8 +32,9 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
   gap: 7px;
-  margin-top: 22px;
+
 }
 .searchbar input{
   background-color: aliceblue;
@@ -49,7 +50,7 @@
   border-radius: 6px;
 }
 .btn{
-  width: 70px;
+  width:fit-content;
   padding: 9px;
   background-color: rgb(81, 108, 6);
   color: white;
